tests/ui/pattern/struct-mismatch-destructure-14541.stderr
error[E0308]: mismatched types
  --> $DIR/struct-mismatch-destructure-14541.rs:7:9
   |
LL |     let Vec3 { y: _, z: _ } = v;
   |         ^^^^^^^^^^^^^^^^^^^   - this expression has type `Vec2`
   |         |
   |         expected `Vec2`, found `Vec3`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
